# rs_bom

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pi_deploy.sh  pi_start.sh
.github/: dependabot.yml
.github/workflows/: main.yml  security_audit_push.yml  security_audit_schedule.yml
data/: gutenberg.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  reference.rs
rs_bom/: Cargo.toml
rs_bom/benches/: benchmark.rs
rs_bom/fuzz/: Cargo.toml
rs_bom/src/: iterators.rs  lib.rs  parsers.rs  reference.rs
rs_bom_api/: Cargo.toml
rs_bom_api/src/: main.rs
rs_bom_cli/: Cargo.toml
rs_bom_cli/src/: main.rs
rs_bom_emailer/: Cargo.toml
rs_bom_emailer/src/: main.rs
src/: bin.rs  datastructures.rs  gutenberg.rs  iterators.rs  lib.rs  main.rs  parsers.rs  reference.rs
testdata/: bad_data_file.txt
