[package]
name = "rs_bom"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
description = "Library for parsing and analyzing Book of Mormon text and references."
repository = "https://github.com/ephraimkunz/rs_bom/tree/master/rs_bom"
readme = "README.md"
keywords = ["scripture", "BOM", "Book of Mormon", "LDS", "mormon", "Church of Jesus Christ"]
categories = ["text-processing"]
license = "MIT"
edition = "2018"

[lib]
name = "rs_bom"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
thiserror = "1.0"
once_cell = "1.7"
regex = "1.3"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"
ureq = "2"
concat-idents = "1"