[package]
name = "rs_bom_cli"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
anyhow = "1.0"
rand = "0.7"
rs_bom = { path = "../rs_bom" }
