[package]
name = "rs_bom_cli"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
description = "Command-line tool for interacting with Book of Mormon text."
edition = "2018"
categories = ["command-line-utilities"]

[dependencies]
regex = "1.4"
anyhow = "1.0"
rand = "0.8"
rs_bom = { path = "../rs_bom" }
clap = "2.33"
bincode = "1.3"
