[package]
name = "rs_bom_emailer"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-alpha.2"
rs_bom = { path = "../rs_bom" }
rand = "0.7"
chrono = "0.4"